--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@ span,
 p, 
 h5,
 h6 {
-  font-family: Arial, Helvetica, sans-serif !important;
+  /*font-family: Arial, Helvetica, sans-serif !important;*/
+  font-family: "Poppins",sans-serif !important;
   /*font-size: 1em !important;*/
   margin: 0;
   margin-bottom: 2px;
@@ -26,7 +27,7 @@ h6 {
 
 h4 {
   color: rgb(244, 143, 78);
-  font-size: 2em;
+  font-size: 2.2em;
 }
 
 h2 {
@@ -100,6 +101,7 @@ footer .a:hover {
 .MuiListItem-button:hover,
 .MuiButtonBase-root:hover {
   color: #fff !important;
+  background-color: rgba(126, 52, 128, 1) !important;
 }
 
 code {
